# lab1

./: CMakeLists.txt  main.cpp  random.cpp  random.h  time_util.cpp  timer_util.h
